--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
