--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 			<version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.vdurmont</groupId>
+			<artifactId>emoji-java</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
