--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.team1</groupId>
 	<artifactId>currencyconverter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>currencyconverter</name>
+	<name>currencyConverter</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.telegram</groupId>
 			<artifactId>telegrambots</artifactId>
-			<version>6.7.0</version>
+			<version>6.4.0</version>
 		</dependency>
 
 		<dependency>
@@ -51,12 +51,6 @@
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
 			<version>2.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.vdurmont</groupId>
-			<artifactId>emoji-java</artifactId>
-			<version>3.1.3</version>
 		</dependency>
 
 	</dependencies>
